<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.form.xysdk.ui.weight.GameLoginLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/shape_all"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:ems="19"
                android:hint="@string/input_hint_account"
                android:padding="1dp"
                android:textColorHint="#999999"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/shape_all"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:ems="19"
                android:hint="@string/input_hint_password"
                android:padding="1dp"
                android:textColorHint="#999999"
                android:textSize="14sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="15dp"
                android:textColor="@color/color_login"
                android:text="@string/textview_regiter">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="14sp"
                android:padding="15dp"
                android:textColor="@color/color_login"
                android:text="@string/textview_forget">
            </TextView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/color_white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/textview_forgame"
            android:background="@drawable/shape_login"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/main_line"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_height="1px"
                android:src="@color/color_share" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_centerInParent="true"
                android:text="@string/textview_quick_login"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="100dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/img_facebook"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/xy_facebook"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textview_facebook"
                    android:layout_below="@+id/img_facebook">

                </TextView>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/play_game"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/xy_play"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textview_palygame"
                    android:layout_below="@+id/play_game">

                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/play_acouunt"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/xy_play"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textview_palygame"
                    android:layout_below="@+id/play_acouunt">

                </TextView>
            </RelativeLayout>


        </LinearLayout>

    </com.form.xysdk.ui.weight.GameLoginLayout>


</LinearLayout>